<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_main_drawer"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ChatApp</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_account_options">Account Options</string>

    <!-- Headers -->
    <string name="header_login">Login</string>
    <string name="header_register">Register</string>
    <string name="header_resend">Resend Verification Email</string>
    <string name="header_send_reset_code">Send Password Reset Code</string>
    <string name="header_reset_code">Enter Password Reset Code</string>
    <string name="header_reset_password">Reset Password</string>
    <string name="header_settings">Settings</string>
    <string name="header_weather">Weather</string>
    <string name="header_current_conditions">Current Conditions</string>
    <string name="header_twelve_hour_forecast">12-Hour Forecast</string>
    <string name="header_one_day_forecast">1-Day Forecast</string>
    <string name="header_five_day_forecast">5-Day Forecast</string>

    <!-- headers -->
    <string name="header_chat">Chat</string>
    <string name="header_home">Home</string>
    <string name="header_connections">Connections</string>
    <string name="header_requests">Connection Requests</string>
    <string name="header_conversations">Conversations</string>
    <string name="header_inbox">Inbox</string>
    <string name="header_new_conversation">New Conversation</string>

    <!-- Labels -->
    <string name="label_color_selection">App Color Scheme</string>
    <string name="label_select_contacts">Select Chat Members</string>
    <string name="label_pending_connections">Awaiting Your Response</string>
    <string name="label_sent_connections">Requests You\'ve Sent</string>

    <!-- Hints -->
    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_firstname">Enter first name</string>
    <string name="hint_lastname">Enter last name</string>
    <string name="hint_email">Enter e-mail address</string>
    <string name="hint_confirm_password">Reenter password</string>
    <string name="hint_enter_message">Write a message</string>
    <string name="hint_enter_code">Enter password reset code</string>
    <string name="hint_enter_new_password">Enter new password</string>
    <string name="hint_reenter_new_password">Reenter new password</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_location">Enter a location...</string>
    <string name="hint_add_connection">Enter a Username</string>
    <string name="hint_choose_saved_location">Saved locations...</string>

    <!-- EditText text -->
    <string name="edittext_username">test</string>
    <string name="edittext_password">test</string>
    <string name="edittext_firstname">First name</string>
    <string name="edittext_lastname">Last name</string>
    <string name="edittext_email">E-mail address</string>

    <!-- CheckBox text -->
    <string name="checkbox_stay_logged_in">Stay logged in</string>

    <!-- Button text -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_submit">Submit</string>
    <string name="button_logout">Logout</string>
    <string name="button_create_conversation">Create Conversation</string>
    <string name="button_load_conversation">Load Conversation</string>
    <string name="button_settings_apply">Apply</string>
    <string name="button_enter_code">Enter Code</string>
    <string name="button_new_chat">New Chat</string>
    <string name="button_deleteChat">Leave Chat</string>
    <string name="button_delete_connection">Remove</string>
    <string name="button_start_chat">Chat</string>
    <string name="button_accept_request">Accept Request</string>
    <string name="button_deny_request">Deny Request</string>
    <string name="button_delete_request">Remove Request</string>
    <string name="button_save_location">Save Location</string>
    <string name="button_send_request">Send Request</string>
    <string name="button_search">Search</string>
    <string name="button_clear_results">Clear Search</string>


    <!-- Radiobutton Text -->
    <string name="radio_theme1">Blue and Red</string>
    <string name="radio_theme2">Pink and Brown</string>
    <string name="radio_theme3">Grey and Cyan</string>

    <!-- Menu item text -->
    <string name="menu_home">Home</string>
    <string name="menu_connections">Connections</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_weather">Weather</string>
    <string name="send_message">Send message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No Results Found</string>


</resources>
