<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/passwordHeader"
        android:layout_width="253dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/header_reset_password"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailResend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordHeader" />

    <EditText
        android:id="@+id/reenterNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_reenter_new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <Button
        android:id="@+id/submitPasswordButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:text="@string/button_submit"
        app:layout_constraintStart_toEndOf="@+id/reenterNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordHeader" />

</android.support.constraint.ConstraintLayout>