<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_weather" />

    <SearchView
        android:id="@+id/search_bar_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:queryHint="@string/hint_search_location" />

    <TextView
        android:id="@+id/textCurrentConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_current_conditions" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconCurrentConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tempCurrentCondtions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/weatherCurrentCondtions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/_textOneDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_one_day_forecast" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_one_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/minTempOneDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/maxTempOneDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/_textFiveDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_five_day_forecast" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_five_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>